# intero-nix-shim

./: .dir-locals.el  .gitignore  .intero-shim.sh  .stylish-haskell.yaml  .travis.yml  Makefile  README.md  default.nix  dogfood.sh  intero-nix-shim.cabal  shell.nix
app/: Main.hs
src/: Main.hs
src/InteroNixShim/: Main.hs
src/cbits/: silence_stderr.c
