name:                intero-nix-shim
version:             0.1.2
homepage:            https://github.com/michalrus/intero-nix-shim
license:             Apache-2.0
license-file:        LICENSE
author:              Michal Rus
maintainer:          m@michalrus.com
copyright:           2017 Michal Rus
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable intero-nix-shim
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  LambdaCase
  build-depends:       base
                     , optparse-applicative
                     , filepath
                     , directory
                     , split
                     , posix-escape
                     , unix
  default-language:    Haskell2010
  c-sources:           src/cbits/silence_stderr.c
  cc-options:          -Wall -Werror -pedantic

source-repository head
  type:     git
  location: https://github.com/michalrus/intero-nix-shim
